<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workshopz</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">Loading...</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_submit_label">Login</string>
    <string name="empty_username_error">Username cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="network_error">Network error</string>
        <string name="date_label">Date: </string>
    <string name="speakers_label">Speakers: </string>
    <string name="syncdb_service_name">workshopz syncronizer</string>
    
    
    
    <string name="ws_base_url">http://workshopz.apache.dev54.zitec.ro</string>
    <string name="button_register_label">Register</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="phone_number">Phone number</string>
   	<string name="email">Email</string>
   	<string name="user_not_registered">User not registered</string>
   	
</resources>
